# NodeGraphPySide6

./: MANIFEST.in  README.md  setup.cfg
NodeGraphPySide6/: __init__.py  constants.py  pkg_info.py
NodeGraphPySide6/base/: commands.py  factory.py  graph.py  menu.py  model.py  node.py  port.py
NodeGraphPySide6/custom_widgets/: nodes_palette.py  nodes_tree.py
NodeGraphPySide6/custom_widgets/properties_bin/: custom_widget_color_picker.py  custom_widget_file_paths.py  custom_widget_slider.py  custom_widget_vectors.py  node_property_factory.py  node_property_widgets.py  prop_widgets_abstract.py  (+1 more)
NodeGraphPySide6/nodes/: backdrop_node.py  base_node.py  base_node_circle.py  group_node.py  port_node.py
NodeGraphPySide6/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_circle.py  node_group.py  node_overlay_disabled.py  node_port_in.py  node_port_out.py  node_text_item.py  pipe.py  port.py  slicer.py
NodeGraphPySide6/widgets/: actions.py  dialogs.py  node_graph.py  node_widgets.py  scene.py  tab_search.py  viewer.py  viewer_nav.py
docs/: conf.py  constants.rst  custom_widgets.rst  graph.rst  index.rst  menu.rst  node_widgets.rst  port.rst
docs/examples/: ex_menu.rst  ex_node.rst  ex_overview.rst  ex_pipe.rst  ex_port.rst
docs/host_apps/: ex_app_nuke.rst  ex_app_silhouette.rst
docs/nodes/: BackdropNode.rst  BaseNode.rst  GroupNode.rst  NodeObject.rst  PortNode.rst  _index_nodes.rst
examples/: basic_example.py
examples/hotkeys/: hotkey_functions.py
examples/nodes/: basic_nodes.py  custom_ports_node.py  group_node.py  widget_nodes.py
