[metadata]
name = NodeGraphPySide6
version=attr: NodeGraphPySide6.pkg_info.__version__
author=Johnny Chan
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node graph framework for PySide6 that can be
              implemented and re-purposed into applications.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.6
url = https://github.com/somso2e/NodeGraphPySide6
project_urls = 
    Source = https://github.com/somso2e/NodeGraphPySide6/
    Tracker = https://github.com/somso2e/NodeGraphPySide6/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6

[options.extras_require]
PySide6 = PySide6>=6.5.2.2

[options.packages.find]
exclude = examples

[options.package_data]
NodeGraphPySide6 = widgets/icons/node_base.png
